--- a/style.css
+++ b/style.css
@@ -1,3 +1,29 @@
 * {
-    background-color: black;
+    border: 1px solid white;
 }
+.main {
+    height: 100vh;
+    width: 100vw;
+    /* background-color: black; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.display-box {
+    background-color: black;
+    height: 20em;
+    width: 50em;
+    display: grid;
+    grid-template-columns: 1fr 2.3fr;
+    /* row-gap: 5px;
+    column-gap: 5px; */
+    grid-template-rows: 1fr 1fr;
+    gap: 5px;
+
+}
+
+/* .date-box, .clock-box {
+    height: 25%;
+    width: 100%;
+} */
