--- a/playground/modal/style.css
+++ b/playground/modal/style.css
@@ -2,5 +2,45 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
+    border: 1px solid black;
+    font-family: 'Inter', sans-serif;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #222;
+    position: relative;
+    min-height: 100vh;
+}
+
+.main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+    background-color: beige;
+}
+
+.modal {
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    justify-content: center;
+    gap: 0.4rem;
+    min-height: 250px;
+    width: 450px;
+    position: absolute;
+    top: 20%;
+    background-color: white;
+    border: 1px solid #ddd;
+    border-radius: 15px;
+}
+
+.modal input {
+    
 }
