--- a/playground/modal/style.css
+++ b/playground/modal/style.css
@@ -3,11 +3,11 @@
     margin: 0;
     padding: 0;
     /* background-color: aquamarine; */
-    border: 1px solid black;
+    /* border: 1px solid black; */
     font-family: 'Inter', sans-serif;
 }
 
-body {
+/* body {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,17 +15,24 @@ body {
     color: #222;
     position: relative;
     min-height: 100vh;
-}
+    background-color: D2E0FB;
+} */
 
 .main {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    height: 100vh;
-    width: 100vw;
-    background-color: beige;
+    justify-content: center;
+    color: #222;
+    position: relative;
+    min-height: 100vh;
+    background-color: #D2E0FB;
 }
-
+.modal .flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 .modal {
     display: flex;
     flex-direction: column;
@@ -39,8 +46,47 @@ body {
     background-color: white;
     border: 1px solid #ddd;
     border-radius: 15px;
+    padding: 1.3rem;
 }
 
 .modal input {
-    
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 0.7rem 1rem;
+    font-size: 0.9em;
+}
+
+.modal p {
+    font-size: 0.9rem;
+    color: #777;
+    margin: 0.4rem 0 0.2rem;
+}
+
+button {
+    cursor: pointer;
+    border: none;
+    font-weight: 600;
+}
+
+.btn {
+    display: inline-block;
+    padding: 0.8rem 1.4rem;
+    font-weight: 700;
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 1em;
+}
+
+.btn-open {
+    position: absolute;
+    bottom: 150px;
+}
+
+.btn-clos {
+    transform: translate(10px, -20px);
+    padding: 0.5rem 0.7rem;
+    background: #eee;
+    border-radius: 50%;
 }
