--- a/playground/modal/style.css
+++ b/playground/modal/style.css
@@ -47,6 +47,7 @@
     border: 1px solid #ddd;
     border-radius: 15px;
     padding: 1.3rem;
+    z-index: 2;
 }
 
 .modal input {
@@ -89,4 +90,18 @@ button {
     padding: 0.5rem 0.7rem;
     background: #eee;
     border-radius: 50%;
+}
+
+.overlay {
+    position: fixed;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(3px);
+    z-index: 1;
+}
+
+.hidden {
+    display: none;
 }
