--- a/playground/modal/style.css
+++ b/playground/modal/style.css
@@ -26,7 +26,7 @@
     color: #222;
     position: relative;
     min-height: 100vh;
-    background-color: #D2E0FB;
+    background-color: #d2e0fb;
 }
 .modal .flex {
     display: flex;
