--- a/playground/meow/style.css
+++ b/playground/meow/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    /* border: 1px solid black; */
 }
 
 .main {
@@ -9,19 +10,46 @@
     width: 100vw;
     background-color: #caf4ff;
     display: flex;
-    align-items: end;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
 
-button {
+.btn {
     height: 2.5rem;
     width: 10rem;
-    /* border: 1px solid #dbd3d3; */
     border: 0;
-    margin-bottom: 7rem;
+    margin-top: 3rem;
     background-color: #10375c;
     color: #f4f6ff;
     border-radius: 7px;
     font-size: 1.5rem;
     font-weight: 900;
+}
+
+.modal {
+    height: 20rem;
+    width: 30rem;
+    border: 1px solid black;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    background-color: #f5f5f7;
+}
+.head {
+    display: flex;
+    justify-content: flex-end;
+}
+.close-btn {
+    margin-top: 7px;
+    margin-right: 7px;
+    font-size: 1rem;
+    /* font-size: 1.5rem; */
+    font-weight: 5;
+    border-radius: 50%;
+    height: 1.5rem;
+    width: 1.5rem;
+    background-color: #e4e0e1;
+    color: #181c14;
+    border: 0;
 }
