--- a/playground/meow/style.css
+++ b/playground/meow/style.css
@@ -6,20 +6,23 @@
 }
 
 .main {
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
+    /* width: 100vw; */
     background-color: #caf4ff;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
 .btn {
+    position: absolute;
+
     height: 2.5rem;
     width: 10rem;
     border: 0;
-    margin-top: 3rem;
+    /* margin-top: 3rem; */
     background-color: #10375c;
     color: #f4f6ff;
     border-radius: 7px;
@@ -27,10 +30,10 @@
     font-weight: 900;
     opacity: 0.93;
     transition: 0.3s;
+    bottom: 150px;
 }
 
 .btn:hover {
-    /* background-color: #10375c; */
     opacity: 1;
     font-size: 1.6rem;
 }
@@ -43,21 +46,35 @@
     display: flex;
     flex-direction: column;
     background-color: #f5f5f7;
+    z-index: 2;
+    position: absolute;
 }
 .head {
     display: flex;
     justify-content: flex-end;
 }
 .close-btn {
+    height: 1.5rem;
+    width: 1.5rem;
     margin-top: 7px;
     margin-right: 7px;
     font-size: 1rem;
-    /* font-size: 1.5rem; */
-    font-weight: 5;
+    font-weight: 600;
     border-radius: 50%;
-    height: 1.5rem;
-    width: 1.5rem;
     background-color: #e4e0e1;
     color: #181c14;
     border: 0;
+    transition: 0.3s;
+    text-align: center;
+}
+
+.close-btn:hover {
+    font-size: 1.1rem;
+    font-weight: 700;
+    height: 1.6rem;
+    width: 1.6rem;
+}
+
+.hidden {
+    display: none;
 }
