--- a/playground/meow/style.css
+++ b/playground/meow/style.css
@@ -78,3 +78,13 @@
 .hidden {
     display: none;
 }
+
+.overlay {
+    position: absolute;
+    inset: 0;
+    z-index: 1;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(5px);
+}
