--- a/playground/dropdown/style.css
+++ b/playground/dropdown/style.css
@@ -19,4 +19,44 @@ body {
     color: black;
 }
 
-.bt
+.btn {
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: var(--gap);
+    padding: 0.6rem;
+    cursor: pointer;
+    border-radius: var(--radius);
+    border: none;
+    box-shadow: var(--shadow);
+    position: relative;
+    font-size: 1.1rem;
+}
+
+.dropdown {
+    position: absolute;
+    width: 250px;
+    box-shadow: var(--shadow);
+    border-radius: var(--radius);
+    margin-top: 0.3rem;
+    background: white;
+}
+
+.dropdown a {
+    display: flex;
+    align-items: center;
+    column-gap: var(--gap);
+    padding: 0.8rem 1rem;
+    text-decoration: none;
+    color: black;
+}
+
+.dropdown a:hover {
+    background-color: var(--color);
+    color: white;
+}
+
+svg:hover {
+    fill: white;
+}
