added dropdwon effect

--- a/playground/dropdown/style.css
+++ b/playground/dropdown/style.css
@@ -41,6 +41,11 @@ body {
     border-radius: var(--radius);
     margin-top: 0.3rem;
     background: white;
+    transition: all 0.1s cubic-bezier(0.16, 1, 0.5, 1);
+
+    transform: translateY(0.5rem);
+    visibility: hidden;
+    opacity: 0;
 }
 
 .dropdown a {
@@ -59,4 +64,15 @@ body {
 
 svg:hover {
     fill: white;
+}
+
+.show {
+    transform: translateY(0rem);
+    visibility: visible;
+    opacity: 1;
+}
+
+.arrow {
+    transform: rotate(180deg);
+    transition: 0.2s ease;
 }
